<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject_name"
                android:textColor="@android:color/black"
                android:textSize="15sp"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semester"
                android:textColor="@android:color/black"
                android:textSize="15sp"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room"
                android:textColor="@android:color/black"
                android:textSize="15sp"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_hour"
                android:textColor="@android:color/black"
                android:textSize="15sp"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_hour"
                android:textColor="@android:color/black"
                android:textSize="15sp"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_schedule"
                android:textColor="@android:color/black"
                android:textSize="15sp"
        />

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
        />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>