<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddStudentActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:weightSum="1.0"
        >

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputEditText"
                    android:layout_weight="0.18"
            >
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/student_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_id_student"
                        android:inputType="number"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:theme="@style/TextInputEditText"
                    android:layout_weight="0.18"
            >
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/hint_semester"
                        android:inputType="number"
                        android:id="@+id/semester_number"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputEditText"
                    android:layout_weight="0.18"
            >
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_group"
                        android:inputType="number"
                        android:id="@+id/group_id"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputEditText"
                    android:layout_weight="0.18"
            >
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_grade"
                        android:inputType="number"
                        android:id="@+id/grade"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputEditText"
                    android:layout_weight="0.18"
            >
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_opportunity"
                        android:inputType="number"
                        android:id="@+id/opportunity"
                />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.10"
                    android:layout_margin="20dp"
                    android:id="@+id/add_student"
                    android:onClick="addStudent"
                    android:text="@string/add_student"
                    android:textAllCaps="false"
                    android:theme="@style/MaterialButton"
            />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>